# Computer-Vision

./: .gitignore  GUI.cpp  trafs.cpp
CV_Practice_StructureFromMotion/: CV_Practise_SfM.sln
CV_Practice_StructureFromMotion/CV_Practise_SfM/: CV_Practise_SfM.vcxproj  CV_Practise_SfM.vcxproj.filters
GY3_Visualization/: c.sh
GY3_Visualization/GY3/: HW1-GUI.sln
GY3_Visualization/GY3/HW1-GUI/: GUI.cpp  HW1-GUI.vcxproj  HW1-GUI.vcxproj.filters  MatrixReaderWriter.cpp  MatrixReaderWriter.h
HW1-GUI/HW1-GUI/: GUI.cpp  HW1-GUI.vcxproj
HW1-GUI/HW1-GUI/Debug/: vc142.idb
HW1-GUI/x64/Debug/: HW1-GUI.ilk
HW2/HW1-GUI/: GUI.cpp  HW1-GUI.vcxproj.filters
assignments/: line_fitting.cpp
assignments/cpp/: CV_Practise_RANSAC.cpp  line_fitting.cpp
assignments/homography_estimation/: homography.cpp  image1.txt  image2.txt  image3.txt  panorama.cpp
assignments/homography_estimation/HomographyEstimation/: HomographyEstimation.sln
assignments/line_detection/: line_fitting.cpp
assignments/plane_detection/: BestInliners.xyz  Inliners.xyz  MatrixReaderWriter.cpp  Selected_points.xyz  TEST.xyz  plane_fitting.cpp  room_result.xyz  street_result.xyz  tmp.xyz
assignments/plane_detection/CMakePlaneDetection/: CMakeLists.txt  main  plane_fitting.cpp
assignments/python/: line_fitting.py
camera_calibration/: calib.cpp  calib_flipped.cpp  camera_params.txt
camera_calibration/update/: calib_flipped.cpp  camera_params.txt
gy8/: tmp.cpp
gy8/Homography_VSproject/: Homography.sln
gy8/VSProject/: MatrixReaderWriter.cpp  c.sh  panorama.cpp
gy9/: calib.cpp
(+58 files in other folders)
